BUGFIX changed code for compiling w/ java 1.8